force-app/main/default/objects/Trip_Report__c/Trip_Report__c.object-meta.xml
<CustomObject>
    <label>Trip Report</label>
    <nameField>
        <label>Trip Report</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trip Reports</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>