force-app/main/default/objects/Trip_Report__c/fields/Account_Visited__c.field-meta.xml
<CustomField>
    <fullName>Account_Visited__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account Visited</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Trip Reports</relationshipLabel>
    <relationshipName>Trip_Reports2</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>