force-app/main/default/objects/Trip_Report__c/fields/Artic_Bus_Plans__c.field-meta.xml
<CustomField>
    <fullName>Artic_Bus_Plans__c</fullName>
    <label>Articulated Bus Plans</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>