force-app/main/default/objects/Trip_Report__c/fields/Customer_Experience__c.field-meta.xml
<CustomField>
    <fullName>Customer_Experience__c</fullName>
    <label>Customer Experience</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>