force-app/main/default/objects/Trip_Report__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Visit</fullName>
                <default>true</default>
                <label>Customer Visit</label>
            </value>
            <value>
                <fullName>Demo</fullName>
            </value>
            <value>
                <fullName>Trade Show</fullName>
            </value>
            <value>
                <fullName>Virtual Meeting</fullName>
            </value>
            <value>
                <fullName>Non- Gillig Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>