force-app/main/default/objects/Trip_Report__c/fields/Electric_Bus_Plans__c.field-meta.xml
<CustomField>
    <fullName>Electric_Bus_Plans__c</fullName>
    <label>Electric Bus Plans</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>