force-app/main/default/objects/Trip_Report__c/fields/Field_Service_Items__c.field-meta.xml
<CustomField>
    <fullName>Field_Service_Items__c</fullName>
    <label>Field Service</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>