force-app/main/default/objects/Trip_Report__c/fields/Fleet_Performance__c.field-meta.xml
<CustomField>
    <fullName>Fleet_Performance__c</fullName>
    <label>Fleet Performance Updates</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>