force-app/main/default/objects/Trip_Report__c/fields/Fleet_Replacement_Plans__c.field-meta.xml
<CustomField>
    <fullName>Fleet_Replacement_Plans__c</fullName>
    <label>Fleet Replacement Plans</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>