force-app/main/default/objects/Trip_Report__c/fields/Fuel_Cell_Bus_Plans__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Cell_Bus_Plans__c</fullName>
    <label>Fuel Cell Bus Plans</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>