force-app/main/default/objects/Trip_Report__c/fields/General_Account_Updates__c.field-meta.xml
<CustomField>
    <fullName>General_Account_Updates__c</fullName>
    <description>Ridership, Funding, Growth Plans, etc.</description>
    <inlineHelpText>Ridership, Funding, Growth Plans, etc.</inlineHelpText>
    <label>General Account Updates</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>