force-app/main/default/objects/Trip_Report__c/fields/Internal_Name__c.field-meta.xml
<CustomField>
    <fullName>Internal_Name__c</fullName>
    <formula>Account_Visited__r.Internal_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Internal Name</label>
    <type>Text</type>
</CustomField>