force-app/main/default/objects/Trip_Report__c/fields/Key_Contact_Updates__c.field-meta.xml
<CustomField>
    <fullName>Key_Contact_Updates__c</fullName>
    <label>Key Contact Updates</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>