force-app/main/default/objects/Trip_Report__c/fields/Part_Sales_Prior_Year__c.field-meta.xml
<CustomField>
    <fullName>Part_Sales_Prior_Year__c</fullName>
    <label>Part Sales Prior Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>