force-app/main/default/objects/Trip_Report__c/fields/Part_Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Part_Sales_Rep__c</fullName>
    <label>Part Sales Rep</label>
    <type>Email</type>
</CustomField>