force-app/main/default/objects/Trip_Report__c/fields/Part_Sales_Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Part_Sales_Supervisor__c</fullName>
    <label>Part Sales Supervisor</label>
    <type>Email</type>
</CustomField>