force-app/main/default/objects/Trip_Report__c/fields/Part_Sales_Updates__c.field-meta.xml
<CustomField>
    <fullName>Part_Sales_Updates__c</fullName>
    <label>Parts</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>