force-app/main/default/objects/Trip_Report__c/fields/Part_Sales_YTD__c.field-meta.xml
<CustomField>
    <fullName>Part_Sales_YTD__c</fullName>
    <label>Part Sales YTD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>