force-app/main/default/objects/Trip_Report__c/fields/Parts_Sales_2_Years_Prior__c.field-meta.xml
<CustomField>
    <fullName>Parts_Sales_2_Years_Prior__c</fullName>
    <label>Parts Sales 2 Years Prior</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>