force-app/main/default/objects/Trip_Report__c/fields/Publications_Info__c.field-meta.xml
<CustomField>
    <fullName>Publications_Info__c</fullName>
    <label>Publications Info</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>