force-app/main/default/objects/Trip_Report__c/fields/Resend_Report__c.field-meta.xml
<CustomField>
    <fullName>Resend_Report__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Resend Report</label>
    <type>Checkbox</type>
</CustomField>