force-app/main/default/objects/Trip_Report__c/fields/Retrofits__c.field-meta.xml
<CustomField>
    <fullName>Retrofits__c</fullName>
    <label>Retrofits</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>