force-app/main/default/objects/Trip_Report__c/fields/Ridership__c.field-meta.xml
<CustomField>
    <fullName>Ridership__c</fullName>
    <label>Ridership</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>